[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes/Main.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/NetworkedGameInterface/GameMenu/NetworkedGameMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/AudioMenu/AudioMenu.tscn" type="PackedScene" id=3]

[node name="NetworkedGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -215.5
margin_right = 182.0
margin_bottom = 215.5
rect_min_size = Vector2( 364, 0 )

[node name="MarginContainer" type="MarginContainer" parent="MainPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 64
custom_constants/margin_left = 32
custom_constants/margin_bottom = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer"]
margin_left = 32.0
margin_top = 64.0
margin_right = 332.0
margin_bottom = 367.0
custom_constants/separation = 20
alignment = 1

[node name="ReturnButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 300.0
margin_bottom = 101.0
text = "Return"

[node name="OptionsButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 300.0
margin_bottom = 181.0
text = "Options"

[node name="ForfeitAndExitButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 300.0
margin_bottom = 261.0
text = "Forfeit and Exit"

[node name="AudioMenu" parent="." instance=ExtResource( 3 )]
visible = false
[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/ForfeitAndExitButton" to="." method="_on_ForfeitAndExitButton_pressed"]
[connection signal="return_button_pressed" from="AudioMenu" to="." method="_on_AudioMenu_return_button_pressed"]
